Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-125340

Crash when setting the GraphView width/height

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • None
    • 6.8
    • Graphs: 2D
    • None
    • 40c0a8d9a (dev)

      A crash is experienced when the following example runs

      import QtQuick
      import QtGraphs
      
      Item {
          id: mainWnd
          width: 500
          height: 500    
          GraphsView {
              id: graph1
              width: parent.width
              height: parent.height
              LineSeries {}
          }
      } 

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            owaisakhtar Owais Akhtar
            owaisakhtar Owais Akhtar
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes