Fix crash when setting the GraphView width/height

Task-number: QTBUG-125340
Change-Id: Ic43cb8ca4c2f5191429f81e523de6a1f79b6aac6
Reviewed-by: Kaj Grönholm <kaj.gronholm@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Sami Varanka <sami.varanka@qt.io>